--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+JWT_SECRET=3a7f9b2e5c8d1g4i6k0mnpqrstuvwxyz123456
 MONGO_URI=mongodb://localhost:27017/auth_demo
-SESSION_SECRET=your-secret-key
+NODE_ENV=development
