--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@popperjs/core": "^2.11.8",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
